<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical"
              android:orientation="horizontal">

    <ImageView
            android:id="@+id/imgMenu"
            style="@style/ActionButton"
            app:srcCompat="@drawable/ic_menu_black_24dp"/>

    <com.hvd.xcustomview.view.CustomTextView
            android:id="@+id/textAppbarTitle"
            style="@style/ActivityHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    <com.hvd.xcustomview.view.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/rtl"
        android:textColor="@android:color/white"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchRtl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
