<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnGetReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test get request raw" />

    <Button
        android:id="@+id/btnGetReqJsonObject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test get request json object" />

    <Button
        android:id="@+id/btnGetReqDataObject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test get request data" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Response: " />

    <TextView
        android:id="@+id/textResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>